test/libsolidity/syntaxTests/nameAndTypeResolution/function_clash_with_state_variable_accessor.sol
contract test {
    function fun() public {
        uint64(2);
    }
    uint256 foo;
    function foo() public {}
}
// ----
// DeclarationError: (90-114): Identifier already declared.
